# rust-axum-starter

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
